--- a/templates/adminpages/adminproductlist.html
+++ b/templates/adminpages/adminproductlist.html
@@ -15,6 +15,7 @@
                         <th>Product Title</th>
                         <th>Image</th>
                         <th>Price</th>
+                        <th>Inventory</th>
                         <th>Description</th>
                     </tr>
                 </thead>
@@ -25,6 +26,7 @@
                         <td>{{p.productid.name}}</td>
                         <td><img src="{{p.image.url}}" style="height: 60px;" alt=""></td>
                         <td>{{p.price}}</td>
+                        <td>{{p.num}}</td>
                         <td>{{p.description}}</td>
                     </tr>
                     {% endfor %}
