--- a/templates/adminpages/adminproductlist.html
+++ b/templates/adminpages/adminproductlist.html
@@ -26,7 +26,7 @@
                         <td>{{p.productid.name}}</td>
                         <td><img src="{{p.image.url}}" style="height: 60px;" alt=""></td>
                         <td>{{p.price}}</td>
-                        <td>{{p.num}}</td>
+                        <td>{{p.productid.num}}</td>
                         <td>{{p.description}}</td>
                     </tr>
                     {% endfor %}
