--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
         {% for p in product_list %}
         <div class="col-md-3 card">
             <div class="m-4">
-                <h4><a href="{% url 'ecomapp:productdetail' p.slug %}">{{p.name}}</a></h4>
+                <h4><a href="{% url 'ecomapp:productdetail' p.slug %}">{{p.productid.name}}</a></h4>
                 <img src="{{p.image.url}}" alt="" class="img-fluid" style="height: 200px; object-fit: contain;">
                 <p class="mt-3">Giá: {{p.price}}</p>
                 <a href="{% url 'ecomapp:addtocart' p.id %}" class="btn btn-primary">Thêm vào giỏ</a>
