--- a/templates/productdetail.html
+++ b/templates/productdetail.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}{{product.title}}{% endblock %}
+{% block title %}{{product.productid.name}}{% endblock %}
 
 {% block content %}
 <div class="container">
-    <h3>Sản phẩm: {{product.title}}</h3>
+    <h3>Sản phẩm: {{product.productid.name}}</h3>
     <hr>
     <div class="row">
         <div class="col-md-4">
@@ -21,13 +21,10 @@
             </div>
         </div>
         <div class="col-md-8">
-            <h4>{{product.title}} (Viewed {{product.view_count}} times)</h4>
-            <h5>Danh mục: {{product.category}}</h5>
-            <h5>Giá: <strike>Cũ. {{product.marked_price}}</strike> Mới. {{product.selling_price}}</h5>
+            <h4>{{product.productid.name}}</h4>
+            <h5>Danh mục: {{product.productid.category}}</h5>
+            <h5>Giá: {{product.price}}</h5>
             <a href="{% url 'ecomapp:addtocart' product.id %}" class="btn btn-info">Add To Cart</a>
-            <hr>
-            <p class="text-info">Bảo hành: {{product.warranty}}</p>
-            <p class="text-info">Chính sách đổi trả:{{product.return_policy}}</p>
             <hr>
             <p>{{product.description}}</p>
         </div>
