--- a/templates/adminpages/adminbase.html
+++ b/templates/adminpages/adminbase.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
-<body style="background-color: #d800ff1a;">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
+<body style="background-color: #ffcccc;">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #29a1f1">
         <a class="navbar-brand" href="{% url 'ecomapp:home' %}">HTTMDT</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
