--- a/templates/adminpages/adminreviewdetail.html
+++ b/templates/adminpages/adminreviewdetail.html
@@ -9,7 +9,7 @@
         <div class="col-md-8 mx-auto">
             <h3>Review Detail</h3>
             <hr>
-            <p><span class="font-weight-bold">Review ID: </span> #ORDER_{{rv_obj.id}}</p>
+            <p><span class="font-weight-bold">Review ID: </span> #REVIEW_{{rv_obj.id}}</p>
             <p><span class="font-weight-bold">Review Status: </span> {{rv_obj.isReply}}</p>
             <p><span class="font-weight-bold">Create On: </span> {{rv_obj.reviewtime}}</p>
             <p><span class="font-weight-bold">Customer Information: </span> By {{rv_obj.customerid.userid.fullnameid.fullname}}, {{rv_obj.customerid.userid.contactinfoid.phonenumber}}</p>
