--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <style>
+        .material-icons {
+            position: relative;
+            vertical-align: middle;
+            left: 30px;
+        }
+    </style>
 </head>
 
-<body style="background-color: #d800ff1a;">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
-        <a class="navbar-brand" href="{% url 'ecomapp:home' %}">HTTMDT</a>
+<body style="background-color: #ffcccc;">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #29a1f1">
+        <a class="navbar-brand" href="{% url 'ecomapp:home' %}">BANANA</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -47,11 +55,11 @@
             <form class="form-inline my-2 my-lg-0" action="{% url 'ecomapp:search' %}" method="GET">
                 <input name="keyword" class="form-control mr-sm-2" type="search" placeholder="Search"
                     aria-label="Search" required>
-                <button class="btn btn-danger my-2 my-sm-0" type="submit">Tìm kiếm</button>
+                <button class="btn my-2 my-sm-0" type="submit" style="background-color: #cce6ff">Tìm kiếm</button>
             </form>
             
             <form class="form-inline my-2 my-lg-0" action="{% url 'ecomapp:review' %}">
-                <button class="btn btn-primary" type="submit">Gửi Review</button>
+                <button class="btn btn-danger" type="submit">Gửi Review</button>
             </form>
         </div>
     </nav>
