--- a/templates/adminpages/adminimportproduct.html
+++ b/templates/adminpages/adminimportproduct.html
@@ -1,6 +1,6 @@
 {% extends 'adminpages/adminbase.html' %}
 
-{% block title %}Add New Product{% endblock %}
+{% block title %}Import Product{% endblock %}
 
 {% block content %}
 <div class="container">
