--- a/templates/home.html
+++ b/templates/home.html
@@ -9,20 +9,22 @@
     <!-- <hr> -->
     <div class="row mt-3">
         {% for p in product_list %}
-        <div class="col-md-3 card">
-            <div class="m-4">
-                <h4><a href="{% url 'ecomapp:productdetail' p.slug %}">{{p.productid.name}}</a></h4>
-                <img src="{{p.image.url}}" alt="" class="img-fluid" style="height: 200px; object-fit: contain;">
-                <p class="mt-3">Giá: {{p.price}}</p>
-                <a href="{% url 'ecomapp:addtocart' p.id %}" class="btn btn-primary">Thêm vào giỏ</a>
-                
-                {% if p in wishListItem %}
-                <a href="{% url 'ecomapp:updateWishList' p.id %}?action=rmv" class="material-icons col-md-4 "> favorite </a>
-                {% else %}
-                <a href="{% url 'ecomapp:updateWishList' p.id %}?action=add" class="material-icons col-md-4 "> favorite_border </a>
-                {% endif %}
+            {% if p.isUpload %}
+            <div class="col-md-3 card">
+                <div class="m-4">
+                    <h4><a href="{% url 'ecomapp:productdetail' p.slug %}">{{p.productid.name}}</a></h4>
+                    <img src="{{p.image.url}}" alt="" class="img-fluid" style="height: 200px; object-fit: contain;">
+                    <p class="mt-3">Giá: {{p.price}}</p>
+                    <a href="{% url 'ecomapp:addtocart' p.id %}" class="btn btn-primary">Thêm vào giỏ</a>
+                    
+                    {% if p in wishListItem %}
+                    <a href="{% url 'ecomapp:updateWishList' p.id %}?action=rmv" class="material-icons col-md-4 "> favorite </a>
+                    {% else %}
+                    <a href="{% url 'ecomapp:updateWishList' p.id %}?action=add" class="material-icons col-md-4 "> favorite_border </a>
+                    {% endif %}
+                </div>
             </div>
-        </div>
+            {% endif %}
         {% endfor %}
     </div>
     <nav aria-label="...">
