--- a/templates/adminpages/adminorderdetail.html
+++ b/templates/adminpages/adminorderdetail.html
@@ -48,7 +48,7 @@
                 {% csrf_token %}
                 <select name="status">
                     {% for i, j in allstatus %}
-                    <option value="{{i}}" {% if i == ord_obj.order_status %}selected{% endif %}>{{j}}</option>
+                    <option value="{{i}}" {% if i == ord_obj.status %}selected{% endif %}>{{j}}</option>
                     {% endfor %}
                 </select>
                 <button class="btn btn-info">Change</button>
