--- a/templates/customerprofile.html
+++ b/templates/customerprofile.html
@@ -8,10 +8,15 @@
         <div class="col-md-4">
             <h3>Thông tin chi tiết</h3>
             <hr>
-            <p><span class="font-weight-bold">Tên: </span> {{customer.userid.fullnameid.lastname}}</p>
+            <p><span class="font-weight-bold">Tên: </span> {{customer.userid.fullnameid.fullname}}</p>
             <p><span class="font-weight-bold">Tên đăng nhập: </span> {{customer.userid.accountid.user.username}}</p>
             <p><span class="font-weight-bold">Email: </span> {{customer.userid.contactinfoid.email}}</p>
             <p><span class="font-weight-bold">Địa chỉ: </span> {{customer.userid.addressid.description}}</p>
+            <br> 
+            <a href = "{% url 'ecomapp:wishlist' %}">Yêu Thích</a>
+            <br> 
+            <br> 
+            <a href = "{% url 'ecomapp:reviewlist' %}">Đánh Giá Của Tôi</a> 
         </div>
         <div class="col-md-8">
             <h3>Những đơn hàng trước</h3>
@@ -34,32 +39,6 @@
                         <td>{{ord.total}}</td>
                         <td>{{ord.time|timesince}} ago</td>
                         <td>{{ord.status}}</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-            <h3>Danh Sách Mặt Hàng Yêu Thích</h3>
-            <hr>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>SN</th>
-                        <th>ID</th>
-                        <th>Tên mặt hàng</th>
-                        <th>Ảnh</th>
-                        <th>Giá</th>
-                        <th>Số lượng còn lại</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for item in wishListItem %}
-                    <tr>
-                        <td>{{forloop.counter}}</td>
-                        <td><a href="{% url 'ecomapp:productdetail' item.slug %}">#PRODUCT_{{item.id}}</a></td>
-                        <td>{{item.productid.name}}</td>
-                        <td><img src="{{item.image.url}}" style="height: 60px;" alt=""></td>
-                        <td>{{item.price}} Đ</td>
-                        <td>{{item.productid.num}}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
