--- a/templates/customerorderdetail.html
+++ b/templates/customerorderdetail.html
@@ -33,7 +33,7 @@
                     <tr>
                         <td>{{forloop.counter}}</td>
                         <td><a target="_blank"
-                                href="{% url 'ecomapp:productdetail' ori.itemid.slug %}">{{ori.itemid.name}}({{ori.itemid.id}})</a>
+                                href="{% url 'ecomapp:productdetail' ori.itemid.slug %}">{{ori.itemid.productid.name}}({{ori.itemid.id}})</a>
                         </td>
                         <td>{{ori.itemid.price}}</td>
                         <td>{{ori.count}}</td>
