--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 </head>
 
 <body style="background-color: #ffcccc;">
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #29a1f1">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #ec525c">
         <a class="navbar-brand" href="{% url 'ecomapp:home' %}">BANANA</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,7 +59,7 @@
             </form>
             
             <form class="form-inline my-2 my-lg-0" action="{% url 'ecomapp:review' %}">
-                <button class="btn btn-danger" type="submit">Gửi Review</button>
+                <button class="btn btn-primary" type="submit">Gửi Review</button>
             </form>
         </div>
     </nav>
