--- a/templates/customerprofile.html
+++ b/templates/customerprofile.html
@@ -11,7 +11,7 @@
             <p><span class="font-weight-bold">Tên: </span> {{customer.userid.fullnameid.fullname}}</p>
             <p><span class="font-weight-bold">Tên đăng nhập: </span> {{customer.userid.accountid.user.username}}</p>
             <p><span class="font-weight-bold">Email: </span> {{customer.userid.contactinfoid.email}}</p>
-            <p><span class="font-weight-bold">Địa chỉ: </span> {{customer.userid.addressid.description}}</p>
+            <p><span class="font-weight-bold">Địa chỉ: </span> {{customer.userid.addressid.address}}</p>
             <br> 
             <a href = "{% url 'ecomapp:wishlist' %}">Yêu Thích</a>
             <br> 
