--- a/templates/productdetail.html
+++ b/templates/productdetail.html
@@ -34,8 +34,10 @@
     <div class="col-md-4">
         <div class="col-12">
             {% for feedback in feedbacks %}
-            <h4>{{feedback.customerid.userid.fullnameid.fullname}}:</h4>
-            <textarea readonly = True style = "resize: none;" rows="2" cols="50">{{feedback.content}} &#10;Rate: {{feedback.rate}} Star</textarea>
+            <h4><b>{{feedback.customerid.userid.fullnameid.fullname}}:</b></h4>
+            <textarea readonly = True style = "resize: none;" rows="2" cols="50">{{feedback.content}}</textarea>
+            <p><b>Rating: </b>{{feedback.rate}} Star</p>
+            <p><b>Liên Quan/Không Liên Quan: </b>Liên quan</p>
             {% endfor %}
         </div>
         <form class="row g-3" action="{% url 'ecomapp:productdetail' product.slug %}" method="POST">
