--- a/templates/adminpages/adminbase.html
+++ b/templates/adminpages/adminbase.html
@@ -9,8 +9,8 @@
 </head>
 
 <body style="background-color: #ffcccc;">
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #29a1f1">
-        <a class="navbar-brand" href="{% url 'ecomapp:home' %}">HTTMDT</a>
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #ec525c">
+        <a class="navbar-brand" href="{% url 'ecomapp:adminhome' %}">BANANA</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -18,10 +18,6 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'ecomapp:adminhome' %}">Home<span
-                            class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'ecomapp:adminorderlist' %}">All Orders</a>
                 </li>
