--- a/templates/adminpages/adminorderdetail.html
+++ b/templates/adminpages/adminorderdetail.html
@@ -19,7 +19,7 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>SN</th>
+                        <th>STT</th>
                         <th>Item</th>
                         <th>Rate</th>
                         <th>Quantity</th>
