--- a/templates/adminpages/adminreviewlist.html
+++ b/templates/adminpages/adminreviewlist.html
@@ -10,7 +10,7 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>SN</th>
+                        <th>STT</th>
                         <th>Review ID </th>
                         <th>Customer</th>
                         <th>Create at</th>
