--- a/templates/adminpages/adminorderlist.html
+++ b/templates/adminpages/adminorderlist.html
@@ -10,7 +10,7 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>SN</th>
+                        <th>STT</th>
                         <th>Order ID </th>
                         <th>Customer</th>
                         <th>Ordered On</th>
