--- a/templates/adminpages/adminproductlist.html
+++ b/templates/adminpages/adminproductlist.html
@@ -17,7 +17,7 @@
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th>SN</th>
+                        <th>STT</th>
                         <th>Product Title</th>
                         <th>Image</th>
                         <th>Price</th>
