--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -11,7 +11,7 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>SN</th>
+                        <th>STT</th>
                         <th>Sản phẩm</th>
                         <th>Rate</th>
                         <th>Số lượng</th>
