--- a/templates/customerorderdetail.html
+++ b/templates/customerorderdetail.html
@@ -21,7 +21,7 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>SN</th>
+                        <th>STT</th>
                         <th>Item</th>
                         <th>Rate</th>
                         <th>Quantity</th>
