--- a/templates/review.html
+++ b/templates/review.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container">
     <h1 class="text-left">Đội Ngũ Chăm Sóc Khách Hàng.</h1>
-    <h5 class="text-left">Chúng tôi luôn sẵn sàng lắng nghe ý kiến đóng góp từ bạn. Chúng tôi sẽ phản hồi trong thời gian sớm nhất</h1>
+    <h5 class="text-left">Chúng tôi luôn sẵn sàng lắng nghe ý kiến đóng góp từ bạn. Chúng tôi sẽ phản hồi trong thời gian sớm nhất.</h1>
     <hr style="height:30px">
     <div>
         <form class="row g-3" action="{% url 'ecomapp:review' %}" method="POST">
@@ -15,7 +15,11 @@
               {{ form.content }}
             </div>
             <div class="col-12">
-              <button type="submit" class="btn btn-primary">Send</button>
+              {% if request.user.account %}
+                <button type="submit" class="btn btn-primary">Send</button>
+              {% else %}
+                <button type="submit" class="btn btn-primary" disabled>Send</button>
+              {% endif %}
             </div>
         </form>
     </div>
