--- a/templates/reviewlist.html
+++ b/templates/reviewlist.html
@@ -6,12 +6,12 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8">
-            <h3>Danh Sách Mặt Hàng Yêu Thích</h3>
+            <h3>Danh Sách Đánh Giá Của Tôi</h3>
             <hr>
             <table class="table">
                 <thead>
                     <tr>
-                        <th>SN</th>
+                        <th>STT</th>
                         <th>ID</th>
                         <th>Nội Dung</th>
                         <th>Phản Hồi</th>
