--- a/templates/adminpages/adminbase.html
+++ b/templates/adminpages/adminbase.html
@@ -25,6 +25,9 @@
                     <a class="nav-link" href="{% url 'ecomapp:adminproductlist' %}">All Products</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'ecomapp:adminitemlist' %}">All Items</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'ecomapp:adminimportproduct' %}">Import Products</a>
                 </li>
                 <li class="nav-item">
