--- a/templates/adminpages/adminitemlist.html
+++ b/templates/adminpages/adminitemlist.html
@@ -7,37 +7,33 @@
     <div class="row">
         <div class="col-md-12">
             <h3>All Product list</h3><hr>
-            <form class="form-inline my-2 my-lg-0" action="{% url 'ecomapp:adminproductlist' %}" method="GET">
+            <form class="form-inline my-2 my-lg-0" action="{% url 'ecomapp:adminitemlist' %}" method="GET">
                 <button class="btn my-2 my-sm-0" type="submit" style="background-color: #cce6ff">Tìm kiếm</button>
                 <input name="keyword" class="form-control mr-sm-2" type="search" placeholder="Search"
                     aria-label="Search" required>
             </form>
-            <hr>
-            <a href="{% url 'ecomapp:adminproductcreate' %}">Add New Product</a>
             <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>STT</th>
                         <th>Product Title</th>
-                        <th>Producer</th>
-                        <th>Manufacturing Date</th>
-                        <th>Expiry Date</th>
-                        <th>type</th>
+                        <th>Image</th>
+                        <th>Price</th>
                         <th>Inventory</th>
-                        <th></th>
+                        <th>Description</th>
+                        <th>Upload?</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for p in allproducts %}
                     <tr>
                         <td>{{forloop.counter}}</td>
-                        <td><a href="{% url 'ecomapp:adminproductdetail' p.id %}">{{p.name}}</a></td>
-                        <td>{{p.producerid}}</td>
-                        <td>{{p.manufacturingdate}}</td>
-                        <td>{{p.expirydate}}</td>
-                        <td>{{p.type}}</td>
-                        <td>{{p.num}}</td>
-                        <td><a class="btn btn-info" href="{% url 'ecomapp:adminproductdelete' p.id %}">Delete</a></td>
+                        <td><a href="{% url 'ecomapp:adminitemdetail' p.slug %}">{{p.productid.name}}</a></td>
+                        <td><img src="{{p.image.url}}" style="height: 60px;" alt=""></td>
+                        <td>{{p.price}}</td>
+                        <td>{{p.productid.num}}</td>
+                        <td>{{p.description}}</td>
+                        <td>{{p.isUpload}}</td>
                         
                     </tr>
                     {% endfor %}
