--- a/templates/adminpages/adminitemlist.html
+++ b/templates/adminpages/adminitemlist.html
@@ -1,12 +1,12 @@
 {% extends 'adminpages/adminbase.html' %}
-{% block title %}All Products{% endblock %}
+{% block title %}All Item{% endblock %}
 
 
 {% block content %}
 <div class="container"> 
     <div class="row">
         <div class="col-md-12">
-            <h3>All Product list</h3><hr>
+            <h3>All Item list</h3><hr>
             <form class="form-inline my-2 my-lg-0" action="{% url 'ecomapp:adminitemlist' %}" method="GET">
                 <button class="btn my-2 my-sm-0" type="submit" style="background-color: #cce6ff">Tìm kiếm</button>
                 <input name="keyword" class="form-control mr-sm-2" type="search" placeholder="Search"
