--- a/templates/customerprofile.html
+++ b/templates/customerprofile.html
@@ -26,7 +26,7 @@
         </div>
         <div class="col-md-8">
             <h3>Những đơn hàng trước</h3>
-            <form class="form-inline my-2 my-lg-0" action="{% url 'ecomapp:adminproductsearch' %}" method="GET">
+            <form class="form-inline my-2 my-lg-0" action="" method="GET">
                 <button class="btn my-2 my-sm-0" type="submit" style="background-color: #cce6ff">Tìm kiếm</button>
                 <input name="keyword" class="form-control mr-sm-2" type="search" placeholder="Search"
                     aria-label="Search" required>
